the heading size of the description of the items in cursos page has been corrected for mobile phones to avoid overflowing

--- a/public/css/cursos.css
+++ b/public/css/cursos.css
@@ -733,6 +733,7 @@ justify-content: space-around;
 
 .course-description-card h2{
   text-align: center;
+  font-size: 2.5rem;
 }
 .course-pricing {
   gap:5px;
